<package>
  <name>%(pkgName)s</name>
  
  <version>1.0.0</version>
  
  <description>%(pkgName)s user package</description>
  
  <maintainer>%(userName)s</maintainer>
  
  <license>GPL</license>
  
  <url type="website">http://www.knowrob.org/</url>
  
  <author>%(userName)s</author>
  
  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>knowrob_common</build_depend>
  
  <run_depend>knowrob_common</run_depend>
  
</package>
